environment/blade/bookinfo/overlay/gedemo/2.1.route.delegations/patch/bookinfo-virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - bookinfo.jad.solo.io
    routes:
      - matchers:
          - prefix: /
# ------------- Delegation by label selector --------------
        delegateAction:
          selector:
            namespaces:
              - team1
            labels:
              application-owner: team1
# ---------------------------------------------------------
